Added animations on scroll.

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -11,11 +11,12 @@
   />
   <div class="banner__title-container">
     <img
+      data-aos="fade-up"
       class="banner__title-logo"
       src="assets/img/logo.png"
       alt="logo de women game jam 2023"
     />
-    <div class="banner__title">
+    <div data-aos="fade-up" class="banner__title">
       <img
         class="banner__screw banner__screw--1"
         src="assets/img/screw.png"
