--- a/src/app/home/info/info.component.html
+++ b/src/app/home/info/info.component.html
@@ -1,28 +1,36 @@
 <div class="info">
   <div class="info__content">
-    <wgj-section-title> ¿Qué es Women Game Jam? </wgj-section-title>
-    <p>
+    <wgj-section-title data-aos="fade-up">
+      ¿Qué es Women Game Jam?
+    </wgj-section-title>
+    <p data-aos="fade-up">
       WGJ es una maratón de 3 días de desarrollo de juegos especialmente
       enfocada al público femenino.
     </p>
-    <p>
+    <p data-aos="fade-up">
       La iniciativa del evento nació en Brasil en el 2018, llegando a replicarse
       en diferentes países a nivel Latam. En la versión 2023 se llevará a cabo
       en Argentina, Brasil, Bolivia, Perú, Chile, Puerto Rico, Canadá, Alemania
       y Costa Rica.
     </p>
     <br />
-    <wgj-section-title> ¿Quiénes pueden participar? </wgj-section-title>
-    <p>
+    <wgj-section-title data-aos="fade-up">
+      ¿Quiénes pueden participar?
+    </wgj-section-title>
+    <p data-aos="fade-up">
       No tenemos ninguna restricción por edad ni género para participar del
       evento, pero el evento sí está enfocado en poder apoyar y promover a más
       mujeres en la industria del desarrollo de videojuegos.
     </p>
     <br />
-    <wgj-call-to-action></wgj-call-to-action>
+    <wgj-call-to-action data-aos="fade-up"></wgj-call-to-action>
   </div>
   <div class="info__images">
     <img src="assets/img/info-1.png" alt="niña jugando" />
   </div>
-  <img class="info__cloud" src="assets/img/cloud.png" alt="nube pixelada" />
+  <img
+    class="info__cloud"
+    src="assets/img/cloud.png"
+    alt="nube pixelada"
+  />
 </div>
