--- a/src/app/home/communities/communities.component.html
+++ b/src/app/home/communities/communities.component.html
@@ -1,23 +1,23 @@
 <div class="communities">
-  <wgj-section-title> Comunidades Amigas </wgj-section-title>
+  <wgj-section-title data-aos="fade-up"> Comunidades Amigas </wgj-section-title>
   <div class="container">
     <div class="communities__content">
-      <div>
+      <div data-aos="fade-up">
         <img src="assets/img/gdg-cbba.png" alt="logo de gdg cochabamba" />
       </div>
-      <div>
+      <div data-aos="fade-up">
         <img
           src="assets/img/wtm-cbba.png"
           alt="logo de women techmakers cochabamba"
         />
       </div>
-      <div>
+      <div data-aos="fade-up">
         <img
           src="assets/img/angular-bolivia.png"
           alt="logo de angular bolivia"
         />
       </div>
-      <div>
+      <div data-aos="fade-up">
         <img src="assets/img/gp4tech.png" alt="logo de gp4tech" />
       </div>
     </div>
