Added trainers and sponsors sections.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,4 +2,6 @@
 <wgj-info></wgj-info>
 <wgj-faq></wgj-faq>
 <wgj-videos></wgj-videos>
+<wgj-trainer-postulation></wgj-trainer-postulation>
+<wgj-sponsor-registration></wgj-sponsor-registration>
 <wgj-communities></wgj-communities>
