--- a/src/app/shared/button/button.component.scss
+++ b/src/app/shared/button/button.component.scss
@@ -1,4 +1,4 @@
-.call-to-action {
+.button {
   display: block;
   height: 59px;
   max-width: 100%;
@@ -11,7 +11,7 @@
     width: 237px;
   }
 
-  .call-to-action__label {
+  .button__label {
     align-items: center;
     color: #ffffff;
     display: flex;
