--- a/src/app/shared/call-to-action/call-to-action.component.html
+++ b/src/app/shared/call-to-action/call-to-action.component.html
@@ -1,9 +1,3 @@
-<a
-  class="call-to-action"
-  href="https://forms.gle/yZLhVtzS4tuQx8Sn6"
-  rel="noreferrer"
-  target="_blank"
->
-  <span class="call-to-action__label"> Registrate aquí </span>
-  <img src="assets/img/registration-btn.png" alt="botón de registro" />
-</a>
+<wgj-button link="https://forms.gle/yZLhVtzS4tuQx8Sn6">
+  Registrate aquí
+</wgj-button>
