--- a/src/app/shared/section-title/section-title.component.html
+++ b/src/app/shared/section-title/section-title.component.html
@@ -1,4 +1,4 @@
-<div class="section-title">
+<div class="section-title" [ngClass]="{ 'section-title--orange': isOrange }">
   <div class="section-title__arrow">
     <img src="assets/img/title-arrow.png" alt="flecha señalando el título" />
   </div>
