Add WGJ kids registration button.

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -40,6 +40,9 @@
       <p>La aventura vuelve a comenzar del 11 al 13 de agosto.</p>
       <p>Desarrolla tu creatividad e imaginación.</p>
       <wgj-call-to-action></wgj-call-to-action>
+      <wgj-button link="https://forms.gle/Fipm5KA4GCbWU2H18">
+        WGJ Kids
+      </wgj-button>
     </div>
   </div>
   <img
