--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,6 @@
 <wgj-faq></wgj-faq>
 <wgj-videos></wgj-videos>
 <wgj-trainer-postulation></wgj-trainer-postulation>
+<wgj-avatar-generator></wgj-avatar-generator>
 <wgj-sponsor-registration></wgj-sponsor-registration>
 <wgj-communities></wgj-communities>
