--- a/src/app/home/communities/communities.component.html
+++ b/src/app/home/communities/communities.component.html
@@ -1,5 +1,7 @@
 <div class="communities">
-  <wgj-section-title data-aos="fade-up"> Comunidades Organizadoras </wgj-section-title>
+  <wgj-section-title data-aos="fade-up">
+    Comunidades Organizadoras
+  </wgj-section-title>
   <div class="container">
     <div class="communities__content">
       <div data-aos="fade-up">
