--- a/src/app/home/info/info.component.html
+++ b/src/app/home/info/info.component.html
@@ -28,9 +28,5 @@
   <div class="info__images">
     <img src="assets/img/info-1.png" alt="niña jugando" />
   </div>
-  <img
-    class="info__cloud"
-    src="assets/img/cloud.png"
-    alt="nube pixelada"
-  />
+  <img class="info__cloud" src="assets/img/cloud.png" alt="nube pixelada" />
 </div>
