--- a/src/app/home/sponsor-registration/sponsor-registration.component.html
+++ b/src/app/home/sponsor-registration/sponsor-registration.component.html
@@ -1,6 +1,8 @@
 <div class="sponsor-registration">
   <div class="container sponsor-registration__content">
-    <wgj-section-title data-aos="fade-up"> ¿Quieres ser Sponsor? </wgj-section-title>
+    <wgj-section-title data-aos="fade-up">
+      ¿Quieres ser Sponsor?
+    </wgj-section-title>
     <p data-aos="fade-up">
       Alentamos a las empresas a considerar esta oportunidad para aprovechar los
       beneficios y oportunidades que ofrecemos al ser parte del hackathon más
