--- a/src/app/home/avatar-generator/avatar-generator.component.html
+++ b/src/app/home/avatar-generator/avatar-generator.component.html
@@ -1,64 +1,66 @@
-<div class="center-align container separator-top">
-  <div class="separator-top">
+<div class="container avatar">
+  <div class="avatar__first-section">
     <wgj-section-title data-aos="fade-up">
       Crea tu propio avatar
     </wgj-section-title>
 
-    <section class="separator-top" data-aos="fade-up">
-      <section class="message-list">
-        <section class="message -left flex-row">
-          <div class="arrow">
-            <img
-              class="mb-2 max-w-100 girl-chat"
-              src="assets/img/girl-3.png"
-              alt="personajes pixelados"
-            />
-          </div>
-          <!-- Balloon -->
-          <div class="nes-balloon from-left">
-            <p>Desarrollamos esta herramienta para que puedas crear tu avatar</p>
-          </div>
-        </section>
-    
-        <section class="message -right flex-row">
-          <!-- Balloon -->
-          <div class="nes-balloon from-right separator-top boy-chat-container">
-            <p>usarlo en tu cuenta de Discord para interactuar con todas las participantes.</p>
-          </div>
-          <div class="arrow">
-            <img
-                class="mb-2 max-w-100 boy-chat flip-horizontal"
-                src="assets/img/boy-1.png"
-                alt="personajes pixelados"
-              />
-          </div>
-        </section>
-      </section>
-    </section>
+    <div class="avatar__chats" data-aos="fade-up">
+      <div class="avatar__chat">
+        <div class="nes-balloon from-left avatar__balloon">
+          <p>
+            Desarrollamos esta herramienta para que puedas crear tu avatar.
+          </p>
+        </div>
+        <div class="avatar__kid">
+          <img src="assets/img/girl-3.png" alt="niña pixelada" />
+        </div>
+      </div>
+
+      <div class="avatar__chat avatar__chat--right">
+        <div class="nes-balloon from-right avatar__balloon">
+          <p>
+            Úsalo en tu cuenta de Discord para interactuar con todos y todas las
+            participantes.
+          </p>
+        </div>
+        <div class="avatar__kid">
+          <img src="assets/img/boy-1.png" alt="niño pixelado" />
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="flex-row separator-top">
-    <div class="avatar-profile">
-      <div #screen class="bg-image center px-2" [ngStyle]="{'background-image': 'url(../../../assets/img/' + bgImage + ')'}">
+
+  <div class="avatar__second-section">
+    <div class="avatar__profile">
+      <div
+        #screen
+        class="avatar__bg-image"
+        [ngStyle]="{
+          'background-image': 'url(/assets/img/' + bgImage + ')'
+        }"
+      >
         <div [innerHTML]="buildAvatarSvg() | sanitizeHtml"></div>
       </div>
-      <div class="flex-row">
-        <div class="arrow flip-horizontal" (click)="previousBgImage()">
+      <div class="avatar__download-container">
+        <div
+          class="avatar__arrow avatar__arrow--flip"
+          (click)="previousBgImage()"
+        >
           <img src="assets/img/title-arrow.png" alt="arrow" />
         </div>
         <button
-          (click)="downloadImage()"
           type="button"
           class="avatar__download-button"
+          (click)="downloadImage()"
         >
           Descargar avatar
         </button>
-        <div class="arrow" (click)="nextBgImage()">
+        <div class="avatar__arrow" (click)="nextBgImage()">
           <img src="assets/img/title-arrow.png" alt="arrow" />
         </div>
       </div>
-      
     </div>
-    <div class="avatar-items">
+    <div class="avatar__items">
       <div *ngFor="let key of avatarKeys">
         <wgj-attribute-selector
           [dialogId]="key"
@@ -69,7 +71,8 @@
     </div>
   </div>
 </div>
-<div class="hide">
+
+<div hidden>
   <img #canvas />
   <a #downloadLink>Descarga</a>
 </div>
