--- a/src/app/home/avatar-generator/attribute-selector/attribute-selector.component.html
+++ b/src/app/home/avatar-generator/attribute-selector/attribute-selector.component.html
@@ -1,41 +1,49 @@
-<!-- Rounded dialog -->
-<div class="card nes-container with-title is-rounded">
+<div class="nes-container with-title is-rounded selector__card">
   <p class="title">{{ decorator.name }}</p>
   <div [innerHTML]="getIcon() | sanitizeHtml" (click)="openDialog()"></div>
 </div>
 
 <dialog
-  class="modal nes-dialog is-rounded"
+  class="modal nes-dialog is-rounded selector__dialog"
   [id]="'dialog-default-' + decorator.name"
 >
   <ng-container *ngIf="decorator">
     <button
       type="button"
-      class="nes-btn is-error close-btn white-text"
+      class="nes-btn is-error selector__close-btn"
       (click)="closeDialog()"
     >
       X
     </button>
     <form method="dialog">
-      <p class="pixel-title">Selecciona un tipo de {{ decorator.name }}</p>
-      <div class="flex-row">
-        <div class="avatar-profile">
+      <p class="selector__title">
+        Selecciona un tipo de {{ decorator.name }}
+      </p>
+      <div class="selector__container">
+        <div class="selector__profile">
           <div [innerHTML]="getAvatar() | sanitizeHtml"></div>
         </div>
-        <div class="avatar-profile">
-          <div *ngIf="hasColor">
-            <label class="description-text black-text" for="favcolor">
+        <div class="selector__profile">
+          <div *ngIf="hasColor" class="selector__color">
+            <label class="selector__description" for="favColor">
               Puedes cambiar el color 🎨 aquí:
             </label>
-            <input type="color" name="favcolor" [(ngModel)]="color" />
+            <input
+              id="favColor"
+              type="color"
+              name="favcolor"
+              [(ngModel)]="color"
+            />
           </div>
-          <div class="avatar-items">
-            <div *ngFor="let item of decorator.options" class="col s4 m3">
-              <div class="card grey lighten-3">
+          <div class="selector__items">
+            <div *ngFor="let item of decorator.options">
+              <div class="selector__card">
                 <div
                   class="nes-container is-rounded"
                   (click)="selectItem(item)"
-                  [class.selectedItem]="item === decorator.currentValue"
+                  [ngClass]="{
+                    'selector__selected': item === decorator.currentValue
+                  }"
                   [innerHTML]="getPreviewItem(item) | sanitizeHtml"
                 ></div>
               </div>
