Add friendly communities component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,3 +6,4 @@
 <wgj-avatar-generator></wgj-avatar-generator>
 <wgj-sponsor-registration></wgj-sponsor-registration>
 <wgj-communities></wgj-communities>
+<wgj-friendly-communities></wgj-friendly-communities>
