--- a/src/app/home/friendly-communities/friendly-communities.component.html
+++ b/src/app/home/friendly-communities/friendly-communities.component.html
@@ -23,6 +23,16 @@
           />
         </a>
       </div>
+      <div data-aos="fade-up">
+        <a href="http://magicgamesbolivia.com" target="_blank">
+          <img src="assets/img/logo-magic-games.png" alt="logo de magic game" />
+        </a>
+      </div>
+      <div data-aos="fade-up">
+        <a href="https://bento.me/virtualsonqo" target="_blank">
+          <img src="assets/img/logo-sonqo.jpg" alt="logo de Sonqo" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
