--- a/src/app/home/friendly-communities/friendly-communities.component.html
+++ b/src/app/home/friendly-communities/friendly-communities.component.html
@@ -3,7 +3,11 @@
   <div class="container">
     <div class="friendly-communities__content">
       <div data-aos="fade-up">
-        <a href="https://www.facebook.com/MujeresTICsBO" target="_blank">
+        <a
+          href="https://www.facebook.com/MujeresTICsBO"
+          rel="noreferrer"
+          target="_blank"
+        >
           <img
             src="assets/img/logo-mujeres-tics.png"
             alt="logo de mujeres tics"
@@ -11,12 +15,16 @@
         </a>
       </div>
       <div data-aos="fade-up">
-        <a href="https://www.facebook.com/TechkidsBolivia" target="_blank">
+        <a
+          href="https://www.facebook.com/TechkidsBolivia"
+          rel="noreferrer"
+          target="_blank"
+        >
           <img src="assets/img/logo-techkids.png" alt="logo de techkids" />
         </a>
       </div>
       <div data-aos="fade-up">
-        <a href="https://mentiacademy.tech" target="_blank">
+        <a href="https://mentiacademy.tech" rel="noreferrer" target="_blank">
           <img
             src="assets/img/logo-menti-academy.png"
             alt="logo de menti academy"
@@ -24,12 +32,16 @@
         </a>
       </div>
       <div data-aos="fade-up">
-        <a href="http://magicgamesbolivia.com" target="_blank">
+        <a href="http://magicgamesbolivia.com" rel="noreferrer" target="_blank">
           <img src="assets/img/logo-magic-games.png" alt="logo de magic game" />
         </a>
       </div>
       <div data-aos="fade-up">
-        <a href="https://bento.me/virtualsonqo" target="_blank">
+        <a
+          href="https://bento.me/virtualsonqo"
+          rel="noreferrer"
+          target="_blank"
+        >
           <img src="assets/img/logo-sonqo.jpg" alt="logo de Sonqo" />
         </a>
       </div>
