Add sponsors component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,3 +7,4 @@
 <wgj-sponsor-registration></wgj-sponsor-registration>
 <wgj-communities></wgj-communities>
 <wgj-friendly-communities></wgj-friendly-communities>
+<wgj-sponsors></wgj-sponsors>
