Add friendly communities

--- a/src/app/home/friendly-communities/friendly-communities.component.html
+++ b/src/app/home/friendly-communities/friendly-communities.component.html
@@ -32,17 +32,45 @@
         </a>
       </div>
       <div data-aos="fade-up">
-        <a href="http://magicgamesbolivia.com" rel="noreferrer" target="_blank">
-          <img src="assets/img/logo-magic-games.png" alt="logo de magic game" />
-        </a>
-      </div>
-      <div data-aos="fade-up">
         <a
           href="https://bento.me/virtualsonqo"
           rel="noreferrer"
           target="_blank"
         >
           <img src="assets/img/logo-sonqo.jpg" alt="logo de Sonqo" />
+        </a>
+      </div>
+      <div data-aos="fade-up">
+        <a
+          href="https://www.facebook.com/mi.MakerHouse"
+          rel="noreferrer"
+          target="_blank"
+        >
+          <img
+            src="assets/img/logo-maker-house.png"
+            alt="logo de maker house"
+          />
+        </a>
+      </div>
+      <div data-aos="fade-up">
+        <a
+          href="https://www.facebook.com/adaindatabo"
+          rel="noreferrer"
+          target="_blank"
+        >
+          <img
+            src="assets/img/logo-ada-in-data.png"
+            alt="logo de Ada in Data"
+          />
+        </a>
+      </div>
+      <div data-aos="fade-up">
+        <a
+          href="https://www.facebook.com/adeiabol"
+          rel="noreferrer"
+          target="_blank"
+        >
+          <img src="assets/img/logo-ade-ia.png" alt="logo de ade ia" />
         </a>
       </div>
     </div>
