--- a/src/app/shared/call-to-action/call-to-action.component.html
+++ b/src/app/shared/call-to-action/call-to-action.component.html
@@ -1,3 +1,3 @@
-<wgj-button link="https://forms.gle/yZLhVtzS4tuQx8Sn6">
-  Registrate aquí
+<wgj-button link="https://itch.io/jam/women-game-jam-2023">
+  Ver los Juegos
 </wgj-button>
